# xtrshow

./: .gitignore  .technoproj  Makefile  README.md  pyproject.toml
.github/workflows/: main.yml  publish.yml
doc/: FEATURES.md  GEMINI.md  GETTING_STARTED.md  PROMPTING.md
script/: pydocgen.py  python.mk  version.mk
tests/: test_checksum_conflicts.py  test_cli_multi.py  test_delete_syntax.py  test_repatch.py  test_repatch_annotations.py  test_repatch_backup.py  test_repatch_delete.py  test_repatch_errors.py  test_repatch_features.py  test_repatch_insertion.py  test_repatch_loose_syntax.py  test_repatch_tail.py  test_repatch_tail_robust.py  test_versioning.py  test_wildcard_match.py
xtrshow/: __init__.py  cli.py  repatch.py
xtrshow/assets/: llm_prompt.md
